--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/NeonWilderness/video2day-ts.git"
   },
   "scripts": {
+    "build": "gulp --production",
+    "dev": "gulp",
     "pretest": "gulp",
     "test": "mocha"
   },
@@ -22,37 +24,37 @@
     "knockout": "^3.4.2"
   },
   "devDependencies": {
-    "@types/chai": "^3.5.2",
-    "@types/jquery": "^2.0.41",
-    "@types/knockout": "^3.4.40",
-    "@types/mocha": "^2.2.41",
-    "@types/request-promise": "^4.1.33",
-    "chai": "^3.5.0",
-    "cheerio": "^0.22.0",
-    "css-loader": "^0.28.0",
-    "del": "^2.2.1",
+    "@types/chai": "^4.0.5",
+    "@types/jquery": "^3.2.16",
+    "@types/knockout": "^3.4.47",
+    "@types/mocha": "^2.2.44",
+    "@types/request-promise": "^4.1.39",
+    "chai": "^4.1.2",
+    "cheerio": "^1.0.0-rc.2",
+    "css-loader": "^0.28.7",
+    "del": "^3.0.0",
     "dotenv-safe": "^4.0.3",
-    "extend-shallow": "^2.0.1",
+    "extend-shallow": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-bytediff": "^1.0.0",
     "gulp-htmlmin": "^3.0.0",
     "gulp-jade": "^1.1.0",
-    "gulp-modify-file": "^0.1.0",
+    "gulp-modify-file": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
+    "jshint": "^2.9.5",
     "jshint-loader": "^0.8.4",
-    "less": "^2.7.1",
-    "less-loader": "^4.0.3",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "load-script": "^1.0.0",
-    "local-web-server": "^1.2.7",
-    "mocha": "^3.0.2",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.0",
-    "smoothscroll": "^0.3.0",
-    "style-loader": "^0.16.1",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.2.2",
-    "webpack": "^2.4.1"
+    "local-web-server": "^2.3.0",
+    "mocha": "^4.0.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "smoothscroll": "^0.4.0",
+    "style-loader": "^0.19.0",
+    "ts-loader": "^3.1.1",
+    "typescript": "^2.6.1",
+    "webpack": "^3.8.1"
   }
 }
