--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video2day",
-  "version": "2.2.4",
+  "version": "2.3.0",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
@@ -26,8 +26,9 @@
     "knockout": "^3.4.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.6",
-    "@types/jquery": "^3.2.16",
+    "@types/chai": "^4.0.10",
+    "@types/es6-promise": "0.0.33",
+    "@types/jquery": "^3.2.17",
     "@types/knockout": "^3.4.47",
     "@types/mocha": "^2.2.44",
     "@types/request-promise": "^4.1.39",
@@ -37,6 +38,7 @@
     "del": "^3.0.0",
     "dotenv-safe": "^4.0.3",
     "extend-shallow": "^3.0.1",
+    "genversion": "^1.1.3",
     "gulp": "^3.9.1",
     "gulp-bytediff": "^1.0.0",
     "gulp-htmlmin": "^3.0.0",
@@ -54,9 +56,9 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "smoothscroll": "^0.4.0",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^3.1.1",
+    "style-loader": "^0.19.1",
+    "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.10.0"
   }
 }
