--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "video2day",
-  "version": "2.3.1",
+  "version": "2.4.0",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/NeonWilderness/video2day-ts.git"
   },
+  "resolutions": {
+    "natives": "1.1.3"
+  },
   "scripts": {
     "build": "gulp --production",
     "dev": "gulp",
+    "deploy": "gulp deploy --production",
     "pretest": "gulp",
     "testpage": "node ./node_modules/local-web-server/bin/cli --spa ./dist/testpage.html",
     "teststory": "node ./node_modules/local-web-server/bin/cli --spa ./dist/teststory.html",
@@ -23,42 +27,44 @@
   "author": "NeonWilderness",
   "license": "MIT",
   "dependencies": {
-    "knockout": "^3.4.2"
+    "knockout": "^3.4.2",
+    "lozad": "^1.6.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.10",
-    "@types/es6-promise": "0.0.33",
-    "@types/jquery": "^3.2.17",
-    "@types/knockout": "^3.4.47",
-    "@types/mocha": "^2.2.44",
-    "@types/request-promise": "^4.1.39",
-    "chai": "^4.1.2",
+    "@types/chai": "^4.1.6",
+    "@types/jquery": "^3.3.10",
+    "@types/knockout": "^3.4.59",
+    "@types/lozad": "^1.1.0",
+    "@types/mocha": "^5.2.5",
+    "@types/request-promise": "^4.1.42",
+    "chai": "^4.2.0",
+    "chalk": "^2.4.1",
     "cheerio": "^1.0.0-rc.2",
-    "css-loader": "^0.28.9",
+    "css-loader": "^1.0.0",
     "del": "^3.0.0",
-    "dotenv-safe": "^4.0.3",
+    "dotenv-safe": "^6.0.0",
     "extend-shallow": "^3.0.2",
-    "genversion": "^2.0.1",
-    "gulp": "^3.9.1",
+    "genversion": "^2.1.0",
+    "gulp": "^4.0.0",
     "gulp-bytediff": "^1.0.0",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-jade": "^1.1.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-modify-file": "^1.0.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-util": "^3.0.7",
-    "jshint": "^2.9.5",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "jshint": "^2.9.6",
     "jshint-loader": "^0.8.4",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "load-script": "^1.0.0",
-    "local-web-server": "^2.4.0",
-    "mocha": "^4.0.1",
-    "request": "^2.83.0",
+    "local-web-server": "^2.6.0",
+    "mocha": "^5.2.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "smoothscroll": "^0.4.0",
-    "style-loader": "^0.20.1",
-    "ts-loader": "^3.4.0",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "style-loader": "^0.23.0",
+    "ts-loader": "^5.2.1",
+    "typescript": "^3.1.1",
+    "webpack": "^4.20.2",
+    "yargs": "^12.0.2"
   }
 }
