--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video2day",
-  "version": "2.4.1",
+  "version": "2.6.0",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
@@ -13,9 +13,10 @@
   "scripts": {
     "build": "gulp --production",
     "dev": "gulp",
-    "deploy": "gulp deploy --production",
-    "deploy:blog": "gulp copy",
-    "pretest": "gulp",
+    "copy": "gulp copy",
+    "lint": "eslint . --quiet --ext .ts",
+    "scripts": "node ./util/uploadScripts",
+    "stories": "node ./util/updateStories",
     "testpage": "node ./node_modules/local-web-server/bin/cli --spa ./dist/testpage.html",
     "teststory": "node ./node_modules/local-web-server/bin/cli --spa ./dist/teststory.html",
     "testtool": "node ./node_modules/local-web-server/bin/cli --spa ./dist/testtool.html"
@@ -28,44 +29,38 @@
   "author": "NeonWilderness",
   "license": "MIT",
   "dependencies": {
-    "knockout": "^3.5.1",
-    "lozad": "^1.15.0"
+    "load-script2": "^2.0.6",
+    "lozad": "^1.16.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
-    "@types/jquery": "^3.5.1",
-    "@types/knockout": "^3.4.67",
+    "@types/chai": "^4.2.14",
+    "@types/jquery": "^1.10.36",
+    "@types/knockout": "^3.4.69",
     "@types/lozad": "^1.9.0",
-    "@types/mocha": "^8.0.2",
-    "@types/request-promise": "^4.1.46",
+    "@types/mocha": "^8.2.0",
+    "@types/request-promise": "^4.1.47",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
-    "css-loader": "^4.2.1",
-    "del": "^5.1.0",
+    "css-loader": "^5.0.1",
+    "del": "^6.0.0",
     "dotenv-safe": "^8.2.0",
-    "extend-shallow": "^3.0.2",
-    "genversion": "^2.2.1",
+    "eslint": "^7.16.0",
     "gulp": "^4.0.2",
-    "gulp-bytediff": "^1.0.0",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-modify-file": "^1.0.1",
     "gulp-pug": "^4.0.1",
-    "gulp-rename": "^2.0.0",
-    "jshint": "^2.12.0",
-    "jshint-loader": "^0.8.4",
-    "less": "^3.12.2",
-    "less-loader": "^6.2.0",
-    "load-script": "^1.0.0",
+    "less": "^4.0.0",
+    "less-loader": "^7.1.0",
     "local-web-server": "^4.2.1",
-    "mocha": "^8.1.1",
+    "mocha": "^8.2.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "request-promise-native": "^1.0.9",
     "smoothscroll": "^0.4.0",
-    "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "yargs": "^15.4.1"
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "webpack": "^4.44.2",
+    "yargs": "^16.2.0"
   }
 }
