Remove Liveleak, add Itemfix

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video2day",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
@@ -33,34 +33,34 @@
     "lozad": "^1.16.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.14",
+    "@neonwilderness/twoday": "^0.3.14",
+    "@types/chai": "^4.2.22",
     "@types/jquery": "^1.10.36",
-    "@types/knockout": "^3.4.69",
-    "@types/lozad": "^1.9.0",
-    "@types/mocha": "^8.2.0",
-    "@types/request-promise": "^4.1.47",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "chai": "^4.2.0",
-    "chalk": "^4.1.0",
-    "cheerio": "^1.0.0-rc.3",
-    "css-loader": "^5.0.1",
+    "@types/knockout": "^3.4.71",
+    "@types/lozad": "^1.16.1",
+    "@types/mocha": "^9.0.0",
+    "@types/request-promise": "^4.1.48",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "chai": "^4.3.4",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
+    "css-loader": "^6.4.0",
     "del": "^6.0.0",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.32.0",
     "gulp": "^4.0.2",
-    "gulp-pug": "^4.0.1",
-    "less": "^4.0.0",
-    "less-loader": "^7.1.0",
-    "local-web-server": "^4.2.1",
-    "mocha": "^8.2.1",
+    "gulp-pug": "^5.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.1.0",
+    "local-web-server": "^5.1.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "smoothscroll": "^0.4.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "webpack": "^4.44.2",
-    "yargs": "^16.2.0"
+    "style-loader": "^3.3.0",
+    "terser-webpack-plugin": "^5.2.4",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.58.2",
+    "yargs": "^17.2.1"
   }
 }
