--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video2day",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
@@ -11,10 +11,12 @@
     "natives": "1.1.3"
   },
   "scripts": {
+    "update": "ncu -u -x @types/jquery,chalk,del,eslint && npm i",
     "build": "gulp --production",
     "dev": "gulp",
     "copy": "gulp copy",
     "lint": "eslint . --quiet --ext .ts",
+    "list": "node ./util/listcdn",
     "scripts": "node ./util/uploadScripts",
     "stories": "node ./util/updateStories",
     "testpage": "node ./node_modules/local-web-server/bin/cli --spa ./dist/testpage.html",
@@ -33,34 +35,34 @@
     "lozad": "^1.16.0"
   },
   "devDependencies": {
-    "@neonwilderness/twoday": "^0.3.14",
-    "@types/chai": "^4.2.22",
+    "@neonwilderness/twoday": "^0.3.23",
+    "@types/chai": "^4.3.4",
     "@types/jquery": "^1.10.36",
-    "@types/knockout": "^3.4.71",
+    "@types/knockout": "^3.4.72",
     "@types/lozad": "^1.16.1",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^10.0.0",
     "@types/request-promise": "^4.1.48",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "chai": "^4.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "chai": "^4.3.7",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.10",
-    "css-loader": "^6.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "css-loader": "^6.7.2",
     "del": "^6.0.0",
     "dotenv-safe": "^8.2.0",
     "eslint": "^7.32.0",
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.1.0",
-    "local-web-server": "^5.1.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "local-web-server": "^5.2.1",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "style-loader": "^3.3.0",
-    "terser-webpack-plugin": "^5.2.4",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.58.2",
-    "yargs": "^17.2.1"
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
+    "yargs": "^17.6.2"
   }
 }
