--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "natives": "1.1.3"
   },
   "scripts": {
-    "update": "ncu -u -x @types/jquery,chalk,del,eslint && npm i",
+    "update": "ncu -u -x @types/jquery,chalk,del && npm i",
     "build": "gulp --production",
     "dev": "gulp",
     "copy": "gulp copy",
@@ -35,34 +35,35 @@
     "lozad": "^1.16.0"
   },
   "devDependencies": {
-    "@neonwilderness/twoday": "^0.3.23",
+    "@neonwilderness/twoday": "^0.3.24",
     "@types/chai": "^4.3.4",
     "@types/jquery": "^1.10.36",
     "@types/knockout": "^3.4.72",
     "@types/lozad": "^1.16.1",
-    "@types/mocha": "^10.0.0",
+    "@types/mocha": "^10.0.1",
     "@types/request-promise": "^4.1.48",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "chai": "^4.3.7",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
-    "css-loader": "^6.7.2",
+    "css-loader": "^6.7.3",
     "del": "^6.0.0",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.36.0",
+    "eslint-webpack-plugin": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "local-web-server": "^5.2.1",
+    "local-web-server": "^5.3.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
-    "webpack": "^5.75.0",
-    "yargs": "^17.6.2"
+    "style-loader": "^3.3.2",
+    "terser-webpack-plugin": "^5.3.7",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.1",
+    "yargs": "^17.7.1"
   }
 }
