--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video2day",
-  "version": "2.8.0",
+  "version": "2.8.1",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
@@ -18,10 +18,7 @@
     "lint": "eslint . --quiet --ext .ts",
     "list": "node ./util/listcdn",
     "scripts": "node ./util/uploadScripts",
-    "stories": "node ./util/updateStories",
-    "testpage": "node ./node_modules/local-web-server/bin/cli --spa ./dist/testpage.html",
-    "teststory": "node ./node_modules/local-web-server/bin/cli --spa ./dist/teststory.html",
-    "testtool": "node ./node_modules/local-web-server/bin/cli --spa ./dist/testtool.html"
+    "stories": "node ./util/updateStories"
   },
   "keywords": [
     "video generator",
@@ -54,7 +51,6 @@
     "gulp-pug": "^5.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
-    "local-web-server": "^5.3.0",
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
