--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video2day",
-  "version": "2.8.1",
+  "version": "2.8.2",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
@@ -17,8 +17,10 @@
     "copy": "gulp copy",
     "lint": "eslint . --quiet --ext .ts",
     "list": "node ./util/listcdn",
-    "scripts": "node ./util/uploadScripts",
-    "stories": "node ./util/updateStories"
+    "scripts:dev": "node ./util/uploadScripts --platform=dev",
+    "scripts:prod": "node ./util/uploadScripts --platform=prod",
+    "stories:dev": "node ./util/updateStories --platform=dev",
+    "stories:prod": "node ./util/updateStories --platform=prod"
   },
   "keywords": [
     "video generator",
@@ -38,14 +40,14 @@
     "@types/knockout": "^3.4.72",
     "@types/lozad": "^1.16.1",
     "@types/mocha": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "chai": "^4.3.7",
     "chalk": "^4.1.2",
     "css-loader": "^6.7.3",
     "del": "^6.0.0",
     "dotenv-safe": "^8.2.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-webpack-plugin": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
@@ -54,8 +56,8 @@
     "style-loader": "^3.3.2",
     "terser-webpack-plugin": "^5.3.7",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.0.2",
-    "webpack": "^5.76.3",
+    "typescript": "^5.0.3",
+    "webpack": "^5.77.0",
     "yargs": "^17.7.1"
   }
 }
