--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "video2day",
-  "version": "2.8.3",
+  "version": "2.9.0",
   "description": "Video/iframe generator for the Twoday blogging platform",
   "main": "video2day.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:NeonWilderness/video2day-ts.git"
-  },
-  "resolutions": {
-    "natives": "1.1.3"
   },
   "scripts": {
     "update": "ncu -u -x @types/jquery,chalk,del && npm i",
@@ -59,5 +56,9 @@
     "typescript": "^5.0.4",
     "webpack": "^5.78.0",
     "yargs": "^17.7.1"
+  },
+  "overrides": {
+    "chokidar": "3.5.3",
+    "glob-parent": "6.0.2"
   }
 }
